refactor: Improve Quality Gate (#41)
* Duplicate CompanyConverter code
* Lambda to method reference
* use .toList() references
* Throw allert